# bendy-web-sential

./: .dev-instruction  .dev-status  .env.development  .env.example  .env.production  .env.staging  .gitignore  .mcp.json  BUGFIX_LOG.md  Cargo.toml  Dockerfile  README.md  bendy-web-sential-计划.md  docker-compose.yml  maintain.md  plan.md  reset_pwd.rs
.claude/skills/bws-test/: SKILL.md
.claude/skills/database/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/frontend-react/: SKILL.md
.claude/skills/rust-backend/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/testing/: SKILL.md
docs/: backend-research-v0.7.0.md  devops-research-v0.7.0.md  frontend-research-v0.7.0.md  github-agents-research.md  github-oauth-integration.md  k8s-traffic-testing.md  nginx-integration.md  technical-proposal-v0.7.0.md
docs/iterations/: README.md  iter-0.1.1-auth.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: BottomNavbar.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx  TopNavbar.tsx  TrafficChart.tsx
frontend/src/i18n/: en.ts  index.ts  zh.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AuditLog.tsx  Dashboard.tsx  Domains.tsx  Login.tsx  Rewrites.tsx  RouteTest.tsx  Routes.tsx  Settings.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml
migrations/: 001_init.sql  002_traffic_metrics.sql  003_user_avatar.sql  004_email.sql  005_hosting_service.sql  006_gateway_auth.sql  007_rewrite_rules.sql  008_performance_indexes.sql
scripts/: auto-dev.sh  backup.sh  ci-build.sh  release.sh
src/: error.rs  main.rs  types.rs
src/api/: audit.rs  auth.rs  domains.rs  k8s.rs  keys.rs  metrics.rs  mod.rs  prometheus.rs  rewrite.rs  traffic.rs  upstreams.rs
src/config/: mod.rs
src/db/: mod.rs
src/gateway/: cache.rs  health_check.rs  mod.rs  proxy.rs
src/middleware/: auth.rs  circuit_breaker.rs  log.rs  mod.rs  ratelimit.rs  retry.rs  validation.rs
src/security/: jwt.rs  mod.rs  token_blacklist.rs  totp.rs
