[package]
name = "bendy-web-sential"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web server
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.5"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }

# HTTP client (proxy)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Authentication
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Security
bcrypt = "0.16"
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
aes-gcm = "0.10"
rand = "0.8"
base32 = "0.5"
base64 = "0.13"

# Time & date
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Traffic control
governor = { version = "0.7", features = ["dashmap"] }
nonzero_ext = "0.3"
once_cell = "1"
rustc-hash = "2"
dashmap = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Environment
config = "0.15"

[dev-dependencies]
tokio-test = "0.4"
