[package]
name = "bendy-web-sential"
version = "0.1.3"
edition = "2021"

[dependencies]
# Web server
axum = { version = "0.6", features = ["macros"] }
axum-extra = "0.7"
tokio = { version = "=1.38.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "fs"] }
hyper = "0.14"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }

# HTTP client (proxy)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# HTTP types
http = "0.2"

# HTTP body utilities
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Authentication
jsonwebtoken = "9"

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3", features = ["json", "env-filter"] }

# Security
bcrypt = "0.16"
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
aes-gcm = "0.10"
rand = "0.8"
base32 = "0.5"
base64 = "0.13"
sha2 = "0.10"
hmac = "0.12"

# Time & date
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.36"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Traffic control
governor = { version = "0.7", features = ["dashmap"] }
nonzero_ext = "0.3"
once_cell = "1"
dashmap = "5"
hashbrown = "=0.14.5"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
sysinfo = "0.30"
libc = "0.2"

# URL encoding
urlencoding = "2"

# Hex encoding
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"